Date	Added

12/20
        * Rolling GUILDCACHE and FASTCHAR into main branches/stable
          tree [MouseJstr]
	* Changed max_paramter to an unsigned int so that you can have over 255 as your max stat [Codemaster]
        * Experimental: Reverting a change on deleting any skill units when we're 
          logging off - might reduce the 'delete_timer' errors [celest]
        * Added check whether an item is allowed to be dropped, for example wedding
          rings [celest]
        * Updated Acid Terror - should never miss [celest]
        * updated Sword Reject - should display reflected damage properly now [celest]
        * Updated Double Strafe - should only work with bows [celest]
        * Replaced checking whether items can be refined or not with a new function [celest]
        * Added Gengar's fix for npctalk outputting to chat [celest]
        * Allowed some values in script_config to be customised in script_athena.conf [celest]

12/19
	* Added -DFASTCHAR to char_sql for testing performance work
	  before I merge it into the main running code [MouseJstr]
	* Added ShowDebug(), Debug(), DisplayDebug(), printDebug(), CL_DEBUG, MSG_DEBUG to _ShowMessage() [MC Cameri]
	* Replaced many \033[x;xm with their corresponding CL_xx constants [MC Cameri]
	* Separated NPCs and Maps from map_athena.conf into npcs_list.txt and maps_list.conf [MC Cameri]
	* Modified all the *_athena.conf's to have the import command enabled by default [Ajarn]
	* Added charcommand_conf.txt and log_conf.txt in conf-tmpl/import [Ajarn]
	* Fixed import command for log_athena.conf file [Ajarn]
	* Updated charcommand.conf [nsstrunks]

12/18
	* Added some of my info to Dev/quotes.txt, not done yet... [Ajarn]
	* Added some ideas to Dev/Ideas_Suggestions.txt [Ajarn]
	* Fixed import command in inter_athena.conf file [Ajarn]
	* Fixed a few command compiling problems for TXT [Codemaster]
	* Modified the main.sql to add the friend0 column; also added the upgrade_1.0.0.sql file [Codemaster]